kubernetes/apps/renovate/renovate-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app renovate-operator
spec:
  hostnames:
    - renovate.rphilipsen.nl
  parentRefs:
    - name: agentgateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          port: 8081

---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app renovate-operator-webhook
spec:
  hostnames:
    - renovate-webhook.rphilipsen.nl
  parentRefs:
    - name: agentgateway-internal
      namespace: network
      sectionName: https
    - name: agentgateway-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /webhook
      backendRefs:
        - name: renovate-operator
          port: 8082
